--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 						<li>
 							<a class="header-link active" href="./index.html">Studio</a>
 						</li>
-						<li><a class="header-link" href="">Portfolio</a></li>
-						<li><a class="header-link" href="">Contacts</a></li>
+						<li><a class="header-link" href="#link">Portfolio</a></li>
+						<li><a class="header-link" href="#link">Contacts</a></li>
 					</ul>
 				</nav>
 				<address class="header-contacts">
@@ -48,10 +48,12 @@
 				</address>
 			</div>
 		</header>
-		<main class="wrapper">
+		<main>
 			<section class="section solutions">
-				<h1 class="solutions-title">Effective Solutions for Your Business</h1>
-				<button type="button" class="btn">Order Service</button>
+				<div class="container">
+					<h1 class="solutions-title">Effective Solutions for Your Business</h1>
+					<button type="button" class="btn">Order Service</button>
+				</div>
 			</section>
 			<section class="section skills">
 				<div class="container">
@@ -113,39 +115,38 @@
 					<h2 class="section-title">Our Team</h2>
 					<ul>
 						<li class="team-card">
-							<div class="img">
-								<img
+							<img
 									src="./images/team1.jpg"
 									width="264"
-									alt="Mark Guerrero Image">
-							</div>
+									alt="Mark Guerrero Image"
+								/>
 							<div class="text">
 								<h3 class="section-name">Mark Guerrero</h3>
 								<p class="section-text">Product Designer</p>
 								<ul class="icons">
 									<li class="icon-element">
-										<a href="" class="icon">
+										<a href="#link" class="icon">
 											<svg width="16" height="16" class="icon">
 												<use href="./images/icons.svg#icon-instagram-2-1"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="icon-element">
-										<a href="" class="icon">
+										<a href="#link" class="icon">
 											<svg width="16" height="16" class="icon">
 												<use href="./images/icons.svg#icon-twitter-1-1"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="icon-element">
-										<a href="" class="icon">
+										<a href="#link" class="icon">
 											<svg width="16" height="16" class="icon">
 												<use href="./images/icons.svg#icon-facebook-1-1"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="icon-element">
-										<a href="" class="icon">
+										<a href="#link" class="icon">
 											<svg width="16" height="16" class="icon">
 												<use href="./images/icons.svg#icon-linkedin-1-1"></use>
 											</svg>
@@ -155,39 +156,38 @@
 							</div>
 						</li>
 						<li class="team-card">
-							<div class="img">
-								<img
+							<img
 									src="./images/team2.jpg"
 									width="264"
-									alt="Tom Ford Image">
-							</div>
+									alt="Tom Ford Image"
+								/>
 							<div class="text">
 								<h3 class="section-name">Tom Ford</h3>
 								<p class="section-text">Frontend Developer</p>
 								<ul class="icons">
 									<li class="icon-element">
-										<a href="" class="icon">
+										<a href="#link" class="icon">
 											<svg width="16" height="16" class="icon">
 												<use href="./images/icons.svg#icon-instagram-2-1"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="icon-element">
-										<a href="" class="icon">
+										<a href="#link" class="icon">
 											<svg width="16" height="16" class="icon">
 												<use href="./images/icons.svg#icon-twitter-1-1"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="icon-element">
-										<a href="" class="icon">
+										<a href="#link" class="icon">
 											<svg width="16" height="16" class="icon">
 												<use href="./images/icons.svg#icon-facebook-1-1"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="icon-element">
-										<a href="" class="icon">
+										<a href="#link" class="icon">
 											<svg width="16" height="16" class="icon">
 												<use href="./images/icons.svg#icon-linkedin-1-1"></use>
 											</svg>
@@ -197,39 +197,38 @@
 							</div>
 						</li>
 						<li class="team-card">
-							<div class="img">
-								<img
+							<img
 									src="./images/team3.jpg"
 									width="264"
-									alt="Camila Garcia Image">
-							</div>
+									alt="Camila Garcia Image"
+								/>
 							<div class="text">
 								<h3 class="section-name">Camila Garcia</h3>
 								<p class="section-text">Marketing</p>
 								<ul class="icons">
 									<li class="icon-element">
-										<a href="" class="icon">
+										<a href="#link" class="icon">
 											<svg width="16" height="16" class="icon">
 												<use href="./images/icons.svg#icon-instagram-2-1"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="icon-element">
-										<a href="" class="icon">
+										<a href="#link" class="icon">
 											<svg width="16" height="16" class="icon">
 												<use href="./images/icons.svg#icon-twitter-1-1"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="icon-element">
-										<a href="" class="icon">
+										<a href="#link" class="icon">
 											<svg width="16" height="16" class="icon">
 												<use href="./images/icons.svg#icon-facebook-1-1"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="icon-element">
-										<a href="" class="icon">
+										<a href="#link" class="icon">
 											<svg width="16" height="16" class="icon">
 												<use href="./images/icons.svg#icon-linkedin-1-1"></use>
 											</svg>
@@ -239,39 +238,38 @@
 							</div>
 						</li>
 						<li class="team-card">
-							<div class="img">
-								<img
+							<img
 									src="./images/team4.jpg"
 									width="264"
-									alt="Daniel Wilson Image">
-							</div>
+									alt="Daniel Wilson Image"
+								/>
 							<div class="text">
 								<h3 class="section-name">Daniel Wilson</h3>
 								<p class="section-text">UI Designer</p>
 								<ul class="icons">
 									<li class="icon-element">
-										<a href="" class="icon">
+										<a href="#link" class="icon">
 											<svg width="16" height="16" class="icon">
 												<use href="./images/icons.svg#icon-instagram-2-1"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="icon-element">
-										<a href="" class="icon">
+										<a href="#link" class="icon">
 											<svg width="16" height="16" class="icon">
 												<use href="./images/icons.svg#icon-twitter-1-1"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="icon-element">
-										<a href="" class="icon">
+										<a href="#link" class="icon">
 											<svg width="16" height="16" class="icon">
 												<use href="./images/icons.svg#icon-facebook-1-1"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="icon-element">
-										<a href="" class="icon">
+										<a href="#link" class="icon">
 											<svg width="16" height="16" class="icon">
 												<use href="./images/icons.svg#icon-linkedin-1-1"></use>
 											</svg>
@@ -293,7 +291,8 @@
 									src="./images/portfolio1.jpg"
 									width="360"
 									height="300"
-									alt="Baking App">
+									alt="Baking App"
+								/>
 								<p class="portfolio-text">
 									14 Stylish and User-Friendly App Design Concepts · Task
 									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -311,7 +310,8 @@
 									src="./images/portfolio2.jpg"
 									width="360"
 									height="300"
-									alt="Cashless Payment">
+									alt="Cashless Payment"
+								/>
 								<p class="portfolio-text">
 									14 Stylish and User-Friendly App Design Concepts · Task
 									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -329,7 +329,8 @@
 									src="./images/portfolio3.jpg"
 									width="360"
 									height="300"
-									alt="Meditation App">
+									alt="Meditation App"
+								/>
 								<p class="portfolio-text">
 									14 Stylish and User-Friendly App Design Concepts · Task
 									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -347,7 +348,8 @@
 									src="./images/portfolio4.jpg"
 									width="360"
 									height="300"
-									alt="Taxi Service">
+									alt="Taxi Service"
+								/>
 								<p class="portfolio-text">
 									14 Stylish and User-Friendly App Design Concepts · Task
 									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -365,7 +367,8 @@
 									src="./images/portfolio5.jpg"
 									width="360"
 									height="300"
-									alt="Screen Illustrations">
+									alt="Screen Illustrations"
+								/>
 								<p class="portfolio-text">
 									14 Stylish and User-Friendly App Design Concepts · Task
 									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -383,7 +386,8 @@
 									src="./images/portfolio6.jpg"
 									width="360"
 									height="300"
-									alt="Online Courses">
+									alt="Online Courses"
+								/>
 								<p class="portfolio-text">
 									14 Stylish and User-Friendly App Design Concepts · Task
 									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -414,28 +418,28 @@
 					<p class="socials-text">Social media</p>
 					<ul class="icons">
 						<li class="icon-element">
-							<a href="" class="icon">
+							<a href="#link" class="icon">
 								<svg width="24" height="24" class="icon">
 									<use href="./images/icons.svg#icon-instagram-2-1"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="icon-element">
-							<a href="" class="icon">
+							<a href="#link" class="icon">
 								<svg width="24" height="24" class="icon">
 									<use href="./images/icons.svg#icon-twitter-1-1"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="icon-element">
-							<a href="" class="icon">
+							<a href="#link" class="icon">
 								<svg width="24" height="24" class="icon">
 									<use href="./images/icons.svg#icon-facebook-1-1"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="icon-element">
-							<a href="" class="icon">
+							<a href="#link" class="icon">
 								<svg width="24" height="24" class="icon">
 									<use href="./images/icons.svg#icon-linkedin-1-1"></use>
 								</svg>
@@ -544,13 +548,13 @@
 							id="user-privacy"
 							required>
 						<label class="form-label terms" for="user-privacy">
-							<span>
+							<span class="span">
 								<svg width="10" height="8" class="icon">
 									<use href="./images/icons.svg#icon-Vector-1"></use>
 								</svg>
 							</span>
 							I accept the terms and conditions of the
-							<a href="">Privacy Policy</a>
+							<a href="" class="policy">Privacy Policy</a>
 						</label>
 					</div>
 					<button class="submit" type="submit">Send</button>
